connect with database

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>توفير</title>
 <link rel="stylesheet" href="css/style.css">
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<style>
+	      .cc{
+			border-left: 6px solid rgb(38, 33, 33);
+		  }      
+
+</style>
 </head>
 <body>
         <div class="navigation">
@@ -94,7 +100,6 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
