--- a/html/index.html
+++ b/html/index.html
@@ -10,17 +10,39 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-
-<div class="hero">
+	<div class="navigation">
+		<ul class="nav">
+			<li><a href="#home">الرئيسية</a></li>
+		
+			<li><a href="#contact">تواصل معنا</a></li>
+			<li>
+				<button type="button" class="btn  text-white" data-bs-toggle="modal" data-bs-target="#confirmationModal">
+					إضافة منتج جديد
+				</button>
+			</li>
+			<li>
+				<a href="cart.html" class="btn ">
+					<i class="fas fa-shopping-cart"></i>  سلة التسوق
+				</a>
+			</li>
+			<li>
+				<a href="#" class="btn ">
+					<i class="fas fa-sign-out-alt"></i> خروج
+				</a>
+			 
+			</li>
+		</ul>
+	</div>
+<div class="hero d-flex flex-column justify-content-center align-items-center">
     <h1>موقع بيع الملابس والاثاث المستخدمة</h1>
     <p>مرحبًا بك في أفضل مكان لشراء وبيع الملابس والأثاث المستعملة عبر الإنترنت</p>
 </div>
 
-<section id="category1" class="m-2">
+<section id="category1" class="m-2 my-5">
     <div class="m-2">
         <div class="row rounded  border my-1">
             <div class="col-12">
-                <h2> غرف نوم</h2>
+                <h2> أثاث </h2>
             </div>
         </div>
         <div class="row">
@@ -83,7 +105,72 @@
     </div>
 </section>
 <!-- Add more sections for other categories -->
-
+<section id="category1" class="m-2">
+    <div class="m-2">
+        <div class="row rounded  border my-1">
+            <div class="col-12">
+                <h2> ملابس رجالية </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4 mb-md-0">
+                <div class="item">
+                    <a href="#"><img class="img" src="../images/clo2.png" alt="اسم المنتج"></a>
+                    <div class="content-entry">
+                        <div class="row m-0 rounded border p-2">
+                            <h6 class="col-8"> شيرت</h6>
+                            <span class="col-4">السعر  100 ريال</span>
+                        </div>
+                        <div class="row m-0 my-2 rounded border p-2">
+                            <p>شيرت  رياضي جديدة</p>
+                        </div>
+                        <div class="d-flex justify-content-evenly m-2">
+                            <a href="product_details.html" class="btn btn-primary">
+                                <i class="fa fa-eye ms-1"></i>   التفاصيل
+                            </a>
+                            <a href="shopping_cart.html" class="btn btn-success">
+                                <i class="fas fa-shopping-cart"></i> اشتر الآن
+                            </a>
+                        </div>
+                        <div class="w-100 p-2 border border-black mt-2 d-flex justify-content-between">
+                            <span><i class="fas fa-user text-primary"></i>   1 المستخدم</span>
+                            <span><i class="fas fa-phone text-success"></i>  1233455</span>
+                            <span><i class="fas fa-calendar-alt text-info"></i> 1/1/2020</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4 mb-md-0">
+                <div class="item">
+                    <a href="#"><img class="img" src="../images/clothes2.png" alt="اسم المنتج"></a>
+                    <div class="content-entry">
+                        <div class="row m-0 rounded border p-2">
+                            <h6 class="col-8"> قميص شبابي 1</h6>
+                            <span class="col-4">السعر  1000 ريال</span>
+                        </div>
+                        <div class="row m-0 my-2 rounded border p-2">
+                            <p>وصف المنتج</p>
+                        </div>
+                        <div class="d-flex justify-content-evenly m-2">
+                            <a href="product_details.html" class="btn btn-primary">
+                                <i class="fa fa-eye ms-1"></i>التفاصيل
+                            </a>
+                            <a href="shopping_cart.html" class="btn btn-success">
+                                <i class="fas fa-shopping-cart"></i> اشتر الآن
+                            </a>
+                        </div>
+                        <div class="w-100 p-2 border border-black mt-2 d-flex justify-content-between">
+                            <span><i class="fas fa-user text-primary"></i> اسم المستخدم</span>
+                            <span><i class="fas fa-phone text-success"></i> رقم الهاتف</span>
+                            <span><i class="fas fa-calendar-alt text-info"></i> التاريخ</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Add more product cards as needed -->
+        </div>
+    </div>
+</section>
 <div class="footer">
     <p>© 2024 Second Hand Store. All rights reserved.</p>
 </div>
@@ -95,7 +182,7 @@
             <div class="modal-header d-flex justify-content-center bg-danger">
                 <h4 class="modal-title text-white fw-bold text-center" id="exampleModalLabel">إضافة منتج جديد</h4>
             </div>
-            <form method="post" action="saveProduct.php" enctype="multipart/form-data">
+            <form method="post" action="#" enctype="multipart/form-data">
                 <div class="modal-body">
                     <div class="form-group my-1">
                         <label for="productName">تصنيف المنتج:</label>
